--- a/index.html
+++ b/index.html
@@ -415,20 +415,22 @@
         <div id="projects-carousel" class="carousel slide bg-black w-75 mx-auto" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 8"></button>
+                    aria-current="true" aria-label="Slide 9"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="1"
-                    aria-label="Slide 7"></button>
+                    aria-label="Slide 8"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="2"
-                    aria-label="Slide 6"></button>
+                    aria-label="Slide 7"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="3"
-                    aria-label="Slide 5"></button>
+                    aria-label="Slide 6"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="4"
-                    aria-label="Slide 4"></button>
+                    aria-label="Slide 5"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="5"
-                    aria-label="Slide 3"></button>
+                    aria-label="Slide 4"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="6"
-                    aria-label="Slide 2"></button>
+                    aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="7"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="78"
                     aria-label="Slide 1"></button>
             </div>
             <div class="carousel-inner">
@@ -436,7 +438,23 @@
                     <img src="assets/img/p8 thum.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-primary">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#featured-project8-details">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#featured-project9-details">
+                                test</a>
+                        </h5>
+                        <h7>Fall 2022</h7>
+                        <ul class="text-start">
+                            <li>Designed, developed, and implemented a robust real estate database system for houses for sale, facilitating efficient storage and retrieval of property information, including location, price, style, bedrooms, amenities, and more</li>
+                            <li>Implemented an intuitive user interface and functionality, allowing users to search, sort, and filter properties based on specific criteria, enhancing the house hunting experience for potential buyers
+                            </li>
+                            <li>Ensured data integrity and scalability by employing proper indexing, normalization techniques, and efficient query optimization, resulting in optimal performance even with a large dataset</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="10000">
+                    <img src="assets/img/p8 thum.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="text-primary">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#project8-details">
                                 Real Estate Database Development</a>
                         </h5>
                         <h7>Fall 2022</h7>
@@ -575,8 +593,38 @@
             </button>
         </div>
 
+        <!-- Project 9 Additional Details -->
+        <div id="featured-project-details" class="modal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">test</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <iframe src="assets/img/p8 extra.pdf" width="100%" height="600px"></iframe>
+                        <img src="assets/img/p8 extra2.mp4" class="img-thumbnail" />
+                        <ul class="text-start text-black-50 mb-0">
+                            <!DOCTYPE html>
+                            <html>
+                            <head>
+                              <title>Project Information</title>
+                            </head>
+                            <body>
+                              <h1>Project Information</h1>
+                              <p>The project involved the design, development, and implementation of a comprehensive real estate database system to streamline the process of searching for houses for sale. The system was built to store and manage essential property information such as location, price, style, bedrooms, water source, exterior color, construction type, garage capacity, school district, basement details, area type, air conditioning, heating type, lot size, and additional features.</p>
+                              <p>Key features of the project included creating a user-friendly interface for easy property search, implementing advanced search functionalities, enabling sorting and filtering options based on specific criteria, and providing detailed property descriptions with accompanying visuals.</p>
+                              <p>To ensure optimal performance, the database was designed with proper normalization techniques, indexing, and query optimization. Data integrity was maintained through robust transaction management, including justifiable rollback procedures in cases such as cancelled orders.</p>
+                              <p>The project not only provided a practical solution for house hunters to efficiently browse and find their desired properties but also demonstrated proficiency in database design, PHP/Python programming, and web development skills.</p>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Project 8 Additional Details -->
-        <div id="featured-project8-details" class="modal" tabindex="-1">
+        <div id="project8-details" class="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -584,7 +632,8 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <iframe src="assets/img/" width="100%" height="600px"></iframe>
+                        <iframe src="assets/img/p8 extra.pdf" width="100%" height="600px"></iframe>
+                        <img src="assets/img/p8 extra2.mp4" class="img-thumbnail" />
                         <ul class="text-start text-black-50 mb-0">
                             <!DOCTYPE html>
                             <html>
