--- a/index.html
+++ b/index.html
@@ -446,6 +446,21 @@
                     <img src="assets/img/p12 thum.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-primary">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#project13-details">
+                                Blockchain Server-Client Node Implementation</a>
+                        </h5>
+                        <h7>Spring 2023</h7>
+                        <ul class="text-start">
+                           <li>Developed and implemented a blockchain server-client node in JavaScript, focusing on the core functionality of the chain structure, hashing functions, and chain validation</li>
+                           <li>Created interactive browser-based endpoints for mining new blocks, printing the full chain, generating transactions, and validating the chain's correctness</li>
+                           <li>Demonstrated understanding of blockchain as a data structure through the implementation of a functional blockchain server-client node, highlighting proficiency in JavaScript and web development</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="10000">
+                    <img src="assets/img/p12 thum.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="text-primary">
                             <a href="#" data-bs-toggle="modal" data-bs-target="#project12-details">
                                 LUDO Board Game Implementation</a>
                         </h5>
