--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <img src="assets/img/p14 extra.pdf" class="img-thumbnail" />
+                        <iframe src="assets/img/p14 extra.pdf" width="100%" height="600px"></iframe>
                         <ul class="text-start text-black-50 mb-0">
                             <!DOCTYPE html>
                             <html>
