--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                         <li>React, OpenCV, Kali Linux, Honeycomb, OpenTelemetry, SQLMap, Hashcat</li>
                         <li>Docker, VirtualBox, Android Studio, Firebase Realtime Database, Parse Server, GitHub, Burp,
                             Vivado, Power BI</li>
-                        <li>Fluent in English, Russian</li>
+                        <li>Fluent in English, Arabic</li>
                     </ul>
                 </div>
             </div>
