--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="d-flex justify-content-center">
                 <div class="text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Hamdan Alkhoori</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Computer Science and Mathematics Student</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Bachelor of Computer Science and Mathematics Graduate</h2>
                     <a class="btn btn-primary" href="#about">Get Started</a>
                 </div>
             </div>
